--- a/images/pages/login.html
+++ b/images/pages/login.html
@@ -18,7 +18,7 @@
                 <input type="text" placeholder="Username" class="text" id="username" required=""><br>
                 <input type="password" placeholder="••••••••••••••" class="password"><br>
                 <a href="#" class="btn-login" id="do-login">Login</a>
-                <a href="/pages/register.html" class="register">Dont have account?</a>
+                <a href="#" class="register">Dont have account?</a>
             </form>
         </div>
     </section>
