--- a/images/pages/register.html
+++ b/images/pages/register.html
@@ -11,15 +11,17 @@
 <body>
     <section class="login" id="login">
         <div class="head">
-        <h1 class="info">Login Page</h1>
+        <h1 class="info">Register Page</h1>
         </div>
         <div class="form">
-            <form>
-                <input type="text" placeholder="Username" class="text" id="username" required=""><br>
-                <input type="password" placeholder="••••••••••••••" class="password"><br>
-                <a href="#" class="btn-login" id="do-login">Login</a>
-                <a href="/pages/register.html" class="register">Dont have account?</a>
-            </form>
+        <form>
+        <input type="text" placeholder="Username" class="text" id="username" required=""><br>
+        <input type="text" placeholder="Email" class="text" id="email" required=""><br>
+        <input type="password" placeholder="••••••••••••••" class="password"><br>
+        <input type="text" placeholder="Name" class="text" id="name" required=""><br>
+        <input type="text" placeholder="Surname" class="text" id="Surname" required=""><br>
+        <a href="#" class="btn-login" id="do-login">Confirm</a>
+        </form>
         </div>
     </section>
         
