--- a/pages/Dashboard.html
+++ b/pages/Dashboard.html
@@ -22,7 +22,6 @@
         </div>
     </header>
     <section class="dashboard" id="dashboard">
-        <div class="title">dashboard</div>
           <div class="overview-boxes">
             <div class="box">
               <div class="right-side">
@@ -39,7 +38,7 @@
             <div class="box">
               <div class="right-side">
                 <div class="box-topic">Total Ads Money</div>
-                <div class="number">$12,876</div>
+                <div class="number">12,876$</div>
                 <div class="indicator">
                 </div>
               </div>
@@ -53,65 +52,52 @@
           </div>
           <div class="sales-boxes">
           <div class="recent-sales box">
-            <div class="title">Recent Sales</div>
+            <div class="title">Post data</div>
             <div class="sales-details">
-              <ul class="details">
-                <li class="topic">Post Date</li>
-                <li>02 Jan 2021</li>
-                <li>02 Jan 2021</li>
-                <li>02 Jan 2021</li>
-                <li>02 Jan 2021</li>
-                <li>02 Jan 2021</li>
-                <li>02 Jan 2021</li>
-                <li>02 Jan 2021</li>
-              </ul>
-              <ul class="details">
-              <li class="topic">Post owner</li>
-              <li>Jontra Wolta</li>
-              <li>Jontra Wolta</li>
-              <li>Jontra Wolta</li>
-              <li>Jontra Wolta</li>
-              <li>Jontra Wolta</li>
-              <li>Jontra Wolta</li>
-              <li>Jontra Wolta</li>
-
-            </ul>
-            <ul class="details">
-              <li class="topic">Total views</li>
-              <li>32,324</li>
-              <li>32,324</li>
-              <li>42,324</li>
-              <li>52,324</li>
-              <li>62,324</li>
-              <li>72,324</li>
-              <li>82,324</li>
-            </ul>
-            <ul class="details">
-              <li class="topic">Ads made</li>
-              <li>204.98$</li>
-              <li>204.98$</li>
-              <li>204.98$</li>
-              <li>204.98$</li>
-              <li>204.98$</li>
-              <li>204.98$</li>
-              <li>204.98$</li>
-            </ul>
-            <ul class="details">
-                <li class="topic">Edit post</li>
-                <li><div class="button"><a href="#" >Edit post</a></div></li>
-                <li><div class="button"><a href="#" >Edit post</a></div></li>
-                <li><div class="button"><a href="#" >Edit post</a></div></li>
-                <li><div class="button"><a href="#" >Edit post</a></div></li>
-                <li><div class="button"><a href="#" >Edit post</a></div></li>
-                <li><div class="button"><a href="#" >Edit post</a></div></li>
-                <li><div class="button"><a href="#" >Edit post</a></div></li>
-              </ul>
+              <table>
+                <thead>
+                  <tr>
+                    <th>Post Date</th>
+                    <th>Total Views</th>
+                    <th>Post Owner</th>
+                    <th>Post Topic</th>
+                    <th>Ads Made</th>
+                    <th class="last">Edit Post</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>02 Jan 2021</td>
+                    <td>32,324</td>
+                    <td>Jontra Wolta</td>
+                    <td>EGYPT</td>
+                    <td>204.95$</td>
+                    <td><div class="button"><a href="#" >Edit post</a></div></td>
+                  </tr>
+                  <tr>
+                    <td>03 Jan 2021</td>
+                    <td>42,324</td>
+                    <td>Jontra Wolta</td>
+                    <td>CHINA</td>
+                    <td>24.55$</td>
+                    <td><div class="button"><a href="#" >Edit post</a></div></td>
+                  </tr>
+                  <tr>
+                    <td>04 Jan 2021</td>
+                    <td>52,324</td>
+                    <td>Jontra Wolta</td>
+                    <td>FRANCE</td>
+                    <td>25.88$</td>
+                    <td><div class="button"><a href="#" >Edit post</a></div></td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
             <div class="button">
               <a href="#" >See All</a>
             </div>
           </div>
-        </div>
+
     </section>
     <section class="footer" id="footer">
         <h2>Copyright © 2023 Kacper Pietrzak.</h2>
