--- a/pages/login.html
+++ b/pages/login.html
@@ -10,13 +10,14 @@
 </head>
 <body>
     <section class="login" id="login">
+        
         <div class="head">
-        <h1 class="info">Login Page</h1>
+            <h1 class="info">Login Page</h1>
         </div>
         <div class="form">
             <form>
                 <input type="text" placeholder="Username" class="text" id="username" required=""><br>
-                <input type="password" placeholder="••••••••••••••" class="password"><br>
+                <input type="password" placeholder="password" class="password"><br>
                 <a href="#" class="btn-login" id="do-login">Login</a>
                 <a href="/pages/register.html" class="register">Dont have account?</a>
             </form>
