--- a/pages/register.html
+++ b/pages/register.html
@@ -17,7 +17,7 @@
         <form>
         <input type="text" placeholder="Username" class="text" id="username" required=""><br>
         <input type="text" placeholder="Email" class="text" id="email" required=""><br>
-        <input type="password" placeholder="••••••••••••••" class="password"><br>
+        <input type="password" placeholder="password" class="password"><br>
         <input type="text" placeholder="Name" class="text" id="name" required=""><br>
         <input type="text" placeholder="Surname" class="text" id="Surname" required=""><br>
         <a href="#" class="btn-login" id="do-login">Confirm</a>
