--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
     <section class="contact" id="contact">
         <h1 class="section-title">Contact</h1>
         <div class="row">
-            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d19752.126207436402!2d19.463155942852797!3d51.76931877223378!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7a09bc332d4a8d73!2sWydzia%C5%82%20Ekonomiczno-Socjologiczny%20Uniwersytetu%20%C5%81%C3%B3dzkiego!5e0!3m2!1spl!2spl!4v1674068861937!5m2!1spl!2spl"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="map" alt="Google map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d19752.126207436402!2d19.463155942852797!3d51.76931877223378!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7a09bc332d4a8d73!2sWydzia%C5%82%20Ekonomiczno-Socjologiczny%20Uniwersytetu%20%C5%81%C3%B3dzkiego!5e0!3m2!1spl!2spl!4v1674068861937!5m2!1spl!2spl"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div class="form">
             <form action="#" method="post">
-                <h3>We will respond to you based on the information you provide.</h3>
+                <h2>We will respond to you based on the information you provide.</h2>
                     <input type="text" name="name" placeholder="Name">
                     <input  type="email" name="e-mail" placeholder="Email">
                     <input  type="phone" name="phone" placeholder="Phone">
