--- a/index.html
+++ b/index.html
@@ -71,6 +71,28 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, tenetur. Harum sint, sapiente praesentium voluptatum, fuga suscipit accusamus, dolorem error quae repudiandae facilis dolore esse eius aspernatur dolorum debitis voluptate vel rerum sit cupiditate quasi fugit hic quis illo. Mollitia debitis quae, laboriosam fugit est expedita eligendi quis dolorem, amet, aspernatur veniam earum tempora totam error eius asperiores necessitatibus laborum voluptatum quisquam. Quae nam beatae accusantium molestiae dolore cumque saepe eum eligendi qui aliquam dignissimos dicta, ab rerum eius corrupti blanditiis aperiam ratione necessitatibus impedit minima! Blanditiis, atque? Quis ducimus soluta repellat expedita recusandae molestiae assumenda reprehenderit vitae temporibus deleniti, nihil quae quaerat autem aperiam explicabo modi? Distinctio temporibus inventore modi atque delectus iste similique debitis ullam? Doloribus similique debitis quisquam dolore. Natus repellat ratione rerum nesciunt temporibus veritatis voluptatum debitis illo. Recusandae temporibus assumenda quaerat, reprehenderit iste quibusdam ea tempora officia at, dolore nesciunt suscipit obcaecati voluptate beatae ipsum quam, repellendus fuga sint laborum eum maxime facere. Dolor aliquid illo iure sapiente et ea expedita voluptatem quas blanditiis, perspiciatis placeat iusto quo quos maxime impedit. Labore excepturi minima ipsum ratione nemo, omnis animi nam, doloremque laudantium laboriosam perspiciatis est quod aut esse. Sint doloremque illo porro enim eligendi laudantium!</p>
             </div>
         </div>
+        <table class="bestArticlesTable">
+                <thead>
+                  <tr>
+                    <th>Post</th>
+                    <th>Total Views</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>AUSTRALIA</td>
+                    <td>32,324</td>
+                    </tr>
+                    <tr>
+                    <td>CHINA</td>
+                    <td>32,324</td>
+                    </tr>
+                    <tr>
+                    <td>FRANCE</td>
+                    <td>32,324</td>
+                    </tr>
+                </tbody>
+              </table>
     </section>
     <section class="aboutas" id="aboutas">
         <h1 class="section-title">Somethink about as</h1>
@@ -92,7 +114,7 @@
     <section class="contact" id="contact">
         <h1 class="section-title">Contact</h1>
         <div class="row">
-            <iframe class="map" alt="Google map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d19752.126207436402!2d19.463155942852797!3d51.76931877223378!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7a09bc332d4a8d73!2sWydzia%C5%82%20Ekonomiczno-Socjologiczny%20Uniwersytetu%20%C5%81%C3%B3dzkiego!5e0!3m2!1spl!2spl!4v1674068861937!5m2!1spl!2spl"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="map" title="Google map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d19752.126207436402!2d19.463155942852797!3d51.76931877223378!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7a09bc332d4a8d73!2sWydzia%C5%82%20Ekonomiczno-Socjologiczny%20Uniwersytetu%20%C5%81%C3%B3dzkiego!5e0!3m2!1spl!2spl!4v1674068861937!5m2!1spl!2spl"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div class="form">
             <form action="#" method="post">
                 <h2>We will respond to you based on the information you provide.</h2>
