--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -118,17 +118,18 @@
             <div class="form">
             <form action="#" method="post">
                 <h2>We will respond to you based on the information you provide.</h2>
-                    <input type="text" name="name" placeholder="Name">
-                    <input  type="email" name="e-mail" placeholder="Email">
-                    <input  type="phone" name="phone" placeholder="Phone">
+                    <label><input type="text" name="name" placeholder="Name"></label>
+                    <label><input  type="email" name="e-mail" placeholder="Email"></label>
+                    <label><input  type="text" name="phone" placeholder="Number"></label>
                     <a href="#" class="btn-login" id="do-login">Confirm</a>
             </form>
             </div>
         </div>
     </section>
     <section class="footer" id="footer">
-        <h2>Copyright © 2023 Kacper Pietrzak.</h2>
-        <img class="image"src="images/Logo2.svg" alt="logov2" >
+        <h2>Kacper Pietrzak</h2>
+        
+        <img class="image" src="images/Logo2.svg" alt="logov2" >
     </section>
     <script src="js/script.js"></script>
 </body>
