--- a/index.html
+++ b/index.html
@@ -118,9 +118,12 @@
             <div class="form">
             <form action="#" method="post">
                 <h2>We will respond to you based on the information you provide.</h2>
-                    <label><input type="text" name="name" placeholder="Name"></label>
-                    <label><input  type="email" name="e-mail" placeholder="Email"></label>
-                    <label><input  type="text" name="phone" placeholder="Number"></label>
+                    <label for="name">Name</label>
+                    <input id="name" type="text" name="name" placeholder="Name">
+                    <label for="email">E-Mail</label>
+                    <input  id="email" type="email" name="e-mail" placeholder="Email">
+                    <label for="phone">Phone</label>
+                    <input  id="phone" type="text" name="phone" placeholder="Phone Number">
                     <a href="#" class="btn-login" id="do-login">Confirm</a>
             </form>
             </div>
@@ -128,7 +131,7 @@
     </section>
     <section class="footer" id="footer">
         <h2>Kacper Pietrzak</h2>
-        
+        <a href="pages/page-details.html"><h2>Page Details</h2></a>
         <img class="image" src="images/Logo2.svg" alt="logov2" >
     </section>
     <script src="js/script.js"></script>
