--- a/pages/page-details.html
+++ b/pages/page-details.html
@@ -12,15 +12,21 @@
     <section class="login" id="login">
         
         <div class="head">
-            <h1 class="info">Login Page</h1>
+            <h1 class="info">Page details</h1>
         </div>
-        <div class="form">
-            <form>
-                <input type="text" placeholder="Username" class="text" id="username" required=""><br>
-                <input type="password" placeholder="password" class="password"><br>
-                <a href="/pages/Dashboard.html" class="btn-login" id="do-login">Login</a>
-                <a href="/pages/register.html" class="register">Dont have account?</a>
-            </form>
+        <div class="page-details-data">
+				<p><strong>Przeglądarka:</strong> Opera</p>
+				<p><strong>Wersja:</strong> 94.0.4606.65</p>
+				<p><strong>Autor:</strong> Pietrzak Kacper</p>
+				<p><strong>Nr indeksu:</strong> 398876</p>
+				<p><strong>Nazwa przedmiotu:</strong> Podstawy technologii internetowych</p>
+				<p><strong>Rok akademicki:</strong> 2022/23</p>
+				<p>
+					<a href="../assets/docs/specyfikacja.pdf" download><i class="fa-solid fa-download"></i> Specyfikacja (pdf)</a>
+				</p>
+				<p>
+					<a href="https://github.com/kapi1023/TravelWebsite" target="_blank"><i class="fa-brands fa-github"></i> Repozytorium</a>
+				</p>
         </div>
     </section>
         
